# ssp-flask

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml
.github/workflows/: python-tests.yaml
app/: __init__.py  logging.conf  logging_config.py
app/components/: models.py  routes.py  views.py
app/pages/: content.yaml  routes.py
app/projects/: editing_routes.py  file_manager.py  forms.py  helpers.py  models.py  opencontrol_routes.py  rendered_routes.py  routes.py  views.py
app/static/css/: pico.red.min.css  styles.css  styles.css.map  styles.scss
app/static/scss/: styles.css  styles.css.map  styles.scss
app/static/uswds/: README.md
app/templates/: base.html  breadcrumbs.html  footer.html  nav.html  sprites.html
app/templates/components/: component_add_component_view.html  component_add_list_view.html  component_list_view.html  component_template_list_view.html  component_templates.html  components_add_list_view.html
app/templates/docs/: docs_base.html  menu.html  resources.html
app/templates/editing/: file_editing.html
app/templates/errors/: 404.html  500.html
app/templates/opencontrol/: components_templates_edit_view.html  components_templates_view.html  edit_component_template.html  opencontrol_view.html  show_component_template.html  show_opencontrol.html
app/templates/page/: index.html  resources.html
app/templates/project/: keys.html  (+22 more)
app/toolkit/: createfiles.py  opencontrol.py
app/utils/: helpers.py  library.py
tests/: conftest.py  test_factory.py  test_helpers.py  test_project.py
tests/assets/: test.yaml
(+52 files in other folders)
